# IN3110

assignment2/: README.md  analyze_pollution_data.py  pyproject.toml
assignment2/analytic_tools/: plotting.py  utilities.py
assignment2/in3110_assignment2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
assignment2/pollution_data/: LICENCE.txt  README.md
assignment2/tests/: conftest.py  test_analyze_pollution_data.py  test_handin.py  test_utilities.py
assignment3/: README.md  profile-report.md  pyproject.toml  setup.py
assignment3/in3110_instapy/: __init__.py  cython_filters.py  numpy_filters.py  profiling.py  python_filters.py
assignment3/in3110_instapy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
assignment3/test/: conftest.py  test_cython.py  test_numba.py  test_numpy.py  test_package.py  test_python.py
assignment4/: collect_dates.py  fetch_olympic_statistics.py  filter_urls.py  find_anniversaries.py  pyproject.toml  requesting_urls.py
assignment4/in3110_assignment4.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
assignment4/olympic_games_results/: best_of_sport_by_Gold.md
assignment4/tables_of_anniversaries/: anniversaries_april.md  anniversaries_august.md  anniversaries_december.md  anniversaries_february.md  anniversaries_january.md  anniversaries_july.md  anniversaries_june.md  anniversaries_march.md  anniversaries_may.md  anniversaries_november.md  anniversaries_october.md  anniversaries_september.md
assignment4/tests/: conftest.py  test_collect_dates.py  test_fetch_olympic_statistics.py  test_files.py  test_filter_urls.py  test_find_anniversaries.py  test_requesting_urls.py
assignment5/: README.md  app.py  http_cache.sqlite  pyproject.toml  requirements.txt  strompris.py
assignment5/in3110_strompris.egg-info/: PKG-INFO  SOURCES.txt
assignment5/templates/: strompris.html
assignment5/tests/: conftest.py  test_app.py  test_files.py  (+1 more)
(+34 files in other folders)
