[build-system]
requires = [
    "setuptools"
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
include = ["analytic_tools"]  # ["*"] by default
exclude = ["test", "pollution_data", "analyze_pollution_data.py"]

[project]
version = "0.1.0"
requires-python = ">=3.7"
license = {text = "MIT License"}

name = "in3110-assignment2"
description = "Tools for restructuring and analysis of pollution_data directory"
readme = "README.md"
dependencies = [
    "numpy",
    "matplotlib", 
    "pytest"
]
