[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
version = "2023.11.10"
requires-python = ">=3.8"
license = {text = "MIT License"}
name = "in3110_strompris"
readme = "README.md"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
# read dependencies from requirements.txt
dependencies ={file = "requirements.txt"}
